# triangle

./: CMakeLists.txt  LICENSE
cmake/: triangleConfig.cmake.in
src/: CMakeLists.txt  triangle.c
